portfolio2_style.css
/******************************/
/********  SMALL SCREEN  ******/
/******************************/

@media screen and (max-width: 650px) {

  .initial-circle {
    margin: 50px auto;
    width: 55px;
    height: 55px;
    line-height: 50px;
    border-radius: 50%;
    border: solid black 1px;
    text-align: center;
    color: black;
    font-size: 26px;
    font-weight: 700;
    font-family: 'Grand Hotel', cursive;
    margin-left: 15px;
  }

  .vl-large {
    border-left: 1px solid black;
    height: 370px;
    margin-left: 25px;
    margin-top: -40px;
    display: inline-block;
  }

  .nav-headers {
    font-size: 10px;
    font-family: 'Poiret One', cursive;

  }
  .nav-section {
    margin-left: 20px;
  }

  .numbers {
    margin: 30px 18px;
    display: inline-block;
    font-family: 'Grand Hotel', cursive;
  }

  .vl-small {
    border-left: 1px solid black;
    height: 30px;
    margin: -50px 20px 0px 25px;
    display: inline-block;
  }

  .nav-lines {
    text-align: right;
    margin-bottom: 10px;
  }

  h1 {
    font-family: 'Grand Hotel', cursive;
    font-size: 50px;
  }

  h2 {
    font-family: 'Poiret One', cursive;
    font-weight: bold;
    font-size: 16px;
  }

  #projects h2 {
    margin-left: 20px;
  }

  #about h1, #projects h1, #skills h1, #contact h1 {
    font-size: 3em;
  }

  p, li, {
    font-family: 'Poiret One', cursive;
    font-size: 15px;
  }

  #skills li, #skills p, #contact p {
    font-family: 'Poiret One', cursive;
    font-size: 15px;
  }

  #about span {
    font-family: 'Poiret One', cursive;
    font-size: 18px;
  }

  .project-desc {
    width: 100%;
    float: right;
    font-family: 'Poiret One', cursive;
    font-size: 18px;
  }

  #title-div {
    display: inline-block;
    float: right;
    margin-top: 10%;
    margin-left: 20%;
    position: absolute;
  }
}


/******************************/
/********  BIG SCREEN  ********/
/******************************/

@media screen and (min-width: 651px) {

  .initial-circle {
    margin: 50px auto;
    width: 55px;
    height: 55px;
    line-height: 50px;
    border-radius: 50%;
    border: solid black 1px;
    text-align: center;
    color: black;
    font-size: 26px;
    font-weight: 700;
    font-family: 'Grand Hotel', cursive;
  }

  .vl-large {
    border-left: 1px solid black;
    height: 500px;
    margin-left: 15px;
    margin-top: -40px;
    display: inline-block;
  }

  .nav-span {
    float: right;
  }

  .nav-headers {
    font-family: 'Poiret One', cursive;
    font-size: 16px;
    font-weight: bold;
    margin-right: 10px;
  }

  .nav-section {
      display: inline-block;
      transform-origin: left top;
      transform:rotate(-90deg) translateX(-100%);
      margin-right: -30px;
      margin-left: 32px;
  }

  .numbers {
    margin: 50px 18px;
    display: inline-block;
    font-family: 'Grand Hotel', cursive;
  }

  .vl-small {
    border-left: 1px solid black;
    height: 40px;
    margin: -50px 20px 0px 25px;
    display: inline-block;
  }

  .nav-lines {
    text-align: right;
    margin-bottom: 20px;
  }

  h1 {
    font-family: 'Grand Hotel', cursive;
    font-size: 80px;
  }

  h2 {
    font-family: 'Poiret One', cursive;
    font-weight: bold;
    margin-left: 20px;
  }

  #about h1, #projects h1, #skills h1, #contact h1 {
    font-size: 4.5em;
  }

  p, li {
    font-family: 'Poiret One', cursive;
    font-size: 20px;
  }

  #skills li {
    font-family: 'Poiret One', cursive;
    font-size: 20px;
  }

  #about span {
    font-family: 'Poiret One', cursive;
    font-size: 24px;
  }

  .project-desc {
    width: 100%;
    float: right;
    font-family: 'Poiret One', cursive;
    font-size: 20px;
  }

  #title-div {
    display: inline-block;
    float: right;
    margin-top: 10%;
    margin-left: 30%;
    position: absolute;
  }
}

/******************************/
/********  ALL SCREENS  *******/
/******************************/

.nav-section a {
  color:black;
}

.remindher {
  display: inline-block;
}

.mockups {
  width: 100%;
  height: auto;
}

.initial-circle a {
  color: black;
}

.logo {
  display: inline-block;
  /*float: left;*/
}

/* Animation on sub-title */
.tracking-in-expand-fwd {
  -webkit-animation: tracking-in-expand-fwd 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
          animation: tracking-in-expand-fwd 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
}
@-webkit-keyframes tracking-in-expand-fwd {
  0% {
    letter-spacing: -0.5em;
    -webkit-transform: translateZ(-700px);
            transform: translateZ(-700px);
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    opacity: 1;
  }
}
@keyframes tracking-in-expand-fwd {
  0% {
    letter-spacing: -0.5em;
    -webkit-transform: translateZ(-700px);
            transform: translateZ(-700px);
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    -webkit-transform: translateZ(0);
            transform: translateZ(0);
    opacity: 1;
  }
}

